--- a/api-service/build.gradle
+++ b/api-service/build.gradle
@@ -12,8 +12,6 @@ android {
     defaultConfig {
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -35,9 +33,11 @@ android {
 }
 
 dependencies {
+    implementation project(':logger-lib')
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
 
     // https://github.com/square/retrofit
     api "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -48,6 +48,5 @@ dependencies {
     api "com.squareup.okhttp3:okhttp:$okhttp_version"
     api "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
-    // https://github.com/orhanobut/logger
-    api 'com.orhanobut:logger:2.2.0'
+    implementation 'com.github.himphen:logger:v3.0.0'
 }
