--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,10 +62,11 @@ android {
 
 dependencies {
     implementation project(':api-service')
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.leanback:leanback:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.cardview:cardview:1.0.0"
 
@@ -77,8 +78,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.4.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0-native-mt'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.0-native-mt'
 
     implementation platform('com.google.firebase:firebase-bom:28.0.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
@@ -89,8 +90,7 @@ dependencies {
     implementation "io.insert-koin:koin-android-ext:$koin_version"
 
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
-    implementation 'com.google.maps.android:maps-ktx:3.0.0'
+    implementation 'com.google.maps.android:maps-ktx:3.0.1'
 
-    // https://github.com/orhanobut/logger
-    api 'com.orhanobut:logger:2.2.0'
+    implementation 'com.github.himphen:logger:v3.0.0'
 }
