--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
         retrofit_version = '2.9.0'
         okhttp_version = '4.9.0'
         koin_version = '3.0.2'
-        kotlinx_coroutines_core = "1.4.2"
+        kotlinx_coroutines_core = '1.4.2'
+        room_version = '2.2.6'
     }
 
     repositories {
@@ -14,8 +15,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0-beta03'
+        classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.8'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.6.1'
     }
