--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,11 +67,13 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.1"
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.leanback:leanback:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.core:core-ktx:1.5.0'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.leanback:leanback:$leanback_version"
+    implementation "androidx.leanback:leanback-preference:$leanback_version"
+    implementation 'androidx.leanback:leanback-tab:1.1.0-beta01'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
 
     // https://developer.android.com/training/data-storage/room
     implementation "androidx.room:room-runtime:$room_version"
