--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.1"
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation "androidx.cardview:cardview:1.0.0"
@@ -103,4 +104,7 @@ dependencies {
     implementation 'com.google.maps.android:maps-ktx:3.0.1'
 
     implementation 'com.github.himphen:logger:v3.0.0'
+
+    // https://github.com/coil-kt/coil
+    implementation 'io.coil-kt:coil:1.2.1'
 }
