--- a/api-service/build.gradle
+++ b/api-service/build.gradle
@@ -48,5 +48,8 @@ dependencies {
     api "com.squareup.okhttp3:okhttp:$okhttp_version"
     api "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
+    implementation platform('com.google.firebase:firebase-bom:28.1.0')
+    implementation 'com.google.firebase:firebase-database-ktx'
+
     implementation 'com.github.himphen:logger:v3.0.0'
 }
