--- a/api-service/build.gradle
+++ b/api-service/build.gradle
@@ -51,5 +51,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
     implementation 'com.google.firebase:firebase-database-ktx'
 
-    implementation 'com.github.himphen:logger:v3.0.0'
+    implementation 'com.github.himphen:logger:3.0.1'
 }
