--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.0'
 
     implementation 'androidx.activity:activity-ktx:1.2.3'
-    implementation 'androidx.fragment:fragment-ktx:1.3.4'
+    implementation 'androidx.fragment:fragment-ktx:1.3.5'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation "androidx.leanback:leanback:$leanback_version"
@@ -94,13 +94,12 @@ dependencies {
 
     // https://github.com/InsertKoinIO/koin
     implementation "io.insert-koin:koin-android:$koin_version"
-    implementation "io.insert-koin:koin-android-ext:$koin_version"
 
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.google.maps.android:maps-ktx:3.0.1'
 
-    implementation 'com.github.himphen:logger:v3.0.0'
+    implementation 'com.github.himphen:logger:3.0.1'
 
     // https://github.com/coil-kt/coil
-    implementation 'io.coil-kt:coil:1.2.1'
+    implementation 'io.coil-kt:coil:1.2.2'
 }
