--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,13 +70,13 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.2.3'
     implementation 'androidx.fragment:fragment-ktx:1.3.5'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
     implementation "androidx.leanback:leanback:$leanback_version"
     implementation "androidx.leanback:leanback-preference:$leanback_version"
     implementation 'androidx.leanback:leanback-tab:1.1.0-beta01'
     implementation 'androidx.preference:preference-ktx:1.1.1'
 
-    // https://developer.android.com/training/data-storage/room
+    // https://developer.android.com/training/data-storag   e/room
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
@@ -96,7 +96,7 @@ dependencies {
     implementation "io.insert-koin:koin-android:$koin_version"
 
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
-    implementation 'com.google.maps.android:maps-ktx:3.0.1'
+    implementation 'com.google.maps.android:maps-ktx:3.1.0'
 
     implementation 'com.github.himphen:logger:3.0.1'
 
