--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.onboarding.OnboardingActivity"
             android:banner="@drawable/app_icon"
             android:exported="true"
             android:icon="@drawable/app_icon"
@@ -23,6 +23,7 @@
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.main.MainActivity" />
         <activity android:name=".ui.settings.eta.listing.SettingsEtaActivity" />
         <activity android:name=".ui.settings.eta.add.AddEtaActivity" />
         <activity android:name=".ui.settings.eta.edit.EditEtaDialogActivity" />
