--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         lifecycle_version = '2.3.1'
         retrofit_version = '2.9.0'
         okhttp_version = '4.9.0'
-        koin_version = '3.1.0'
+        koin_version = '3.1.1'
         kotlinx_coroutines_core = '1.4.2'
         room_version = '2.3.0'
         leanback_version = '1.1.0-rc01'
@@ -16,7 +16,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
+        classpath 'com.android.tools.build:gradle:4.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.8'
@@ -29,6 +29,11 @@ allprojects {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
+    }
+    configurations.all {
+        resolutionStrategy {
+            force 'org.xerial:sqlite-jdbc:3.34.0'
+        }
     }
 }
 
