--- a/api-service/build.gradle
+++ b/api-service/build.gradle
@@ -36,7 +36,7 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.1"
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2'
 
     implementation 'androidx.core:core-ktx:1.6.0'
 
