--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,9 @@ dependencies {
     implementation project(':api-service')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.1"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.1'
 
     implementation 'androidx.activity:activity-ktx:1.2.3'
     implementation 'androidx.fragment:fragment-ktx:1.3.5'
@@ -76,7 +76,10 @@ dependencies {
     implementation 'androidx.leanback:leanback-tab:1.1.0-beta01'
     implementation 'androidx.preference:preference-ktx:1.1.1'
 
-    // https://developer.android.com/training/data-storag   e/room
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
+
+    // https://developer.android.com/training/data-storage/room
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
@@ -101,5 +104,5 @@ dependencies {
     implementation 'com.github.himphen:logger:3.0.1'
 
     // https://github.com/coil-kt/coil
-    implementation 'io.coil-kt:coil:1.2.2'
+    implementation 'io.coil-kt:coil:1.3.0'
 }
