--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".ui.settings.eta.listing.SettingsEtaActivity" />
         <activity android:name=".ui.settings.eta.add.AddEtaActivity" />
         <activity android:name=".ui.settings.eta.edit.EditEtaDialogActivity" />
+        <activity android:name=".ui.settings.eta.layout.EtaLayoutDialogActivity" />
 
         <meta-data
             android:name="com.google.android.gms.version"
