--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,10 +71,13 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.3.5'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
+    // https://developer.android.com/jetpack/androidx/releases/leanback
     implementation "androidx.leanback:leanback:$leanback_version"
     implementation "androidx.leanback:leanback-preference:$leanback_version"
     implementation 'androidx.leanback:leanback-tab:1.1.0-beta01'
-    implementation 'androidx.preference:preference-ktx:1.1.1'
 
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
@@ -102,6 +105,9 @@ dependencies {
     implementation 'com.google.maps.android:maps-ktx:3.1.0'
 
     implementation 'com.github.himphen:logger:3.0.1'
+
+    // https://github.com/afollestad/material-dialogs
+    implementation 'com.afollestad.material-dialogs:core:3.3.0'
 
     // https://github.com/coil-kt/coil
     implementation 'io.coil-kt:coil:1.3.0'
