--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,27 +7,52 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
+        android:supportsRtl="true">
         <activity
-            android:name=".ui.onboarding.OnboardingActivity"
+            android:name=".ui.onboarding.mobile.OnboardingActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.Launcher">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.main.mobile.MainActivity"
+            android:theme="@style/AppTheme.Mobile" />
+
+        <activity
+            android:name=".ui.onboarding.leanback.OnboardingActivity"
             android:banner="@drawable/app_icon"
             android:exported="true"
             android:icon="@drawable/app_icon"
             android:label="@string/app_name"
             android:logo="@drawable/app_icon"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.Leanback">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.main.MainActivity" />
-        <activity android:name=".ui.settings.eta.listing.SettingsEtaActivity" />
-        <activity android:name=".ui.settings.eta.add.AddEtaActivity" />
-        <activity android:name=".ui.settings.eta.edit.EditEtaDialogActivity" />
-        <activity android:name=".ui.settings.eta.layout.EtaLayoutDialogActivity" />
+        <activity
+            android:name=".ui.main.leanback.MainActivity"
+            android:theme="@style/AppTheme.Leanback" />
+        <activity
+            android:name=".ui.settings.eta.listing.SettingsEtaActivity"
+            android:theme="@style/AppTheme.Leanback" />
+        <activity
+            android:name=".ui.settings.eta.add.AddEtaActivity"
+            android:theme="@style/AppTheme.Leanback" />
+        <activity
+            android:name=".ui.settings.eta.edit.EditEtaDialogActivity"
+            android:theme="@style/AppTheme.Leanback" />
+        <activity
+            android:name=".ui.settings.eta.layout.EtaLayoutDialogActivity"
+            android:theme="@style/AppTheme.Leanback" />
 
         <meta-data
             android:name="com.google.android.gms.version"
