--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,7 @@ dependencies {
     implementation "io.insert-koin:koin-android:$koin_version"
 
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.google.maps.android:maps-utils-ktx:2.4.0'
     implementation 'com.google.maps.android:maps-ktx:3.1.0'
 
     implementation 'com.github.himphen:logger:3.0.1'
@@ -114,4 +115,7 @@ dependencies {
 
     // https://github.com/coil-kt/coil
     implementation 'io.coil-kt:coil:1.3.0'
+
+    implementation 'com.github.doyaaaaaken:kotlin-csv-jvm:0.15.2'
+    implementation 'io.github.blackmo18:kotlin-grass-jvm:0.7.1'
 }
