--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,4 +114,7 @@ dependencies {
 
     // https://github.com/coil-kt/coil
     implementation 'io.coil-kt:coil:1.3.0'
+
+    // https://github.com/google/flexbox-layout
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 }
