--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,8 +67,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.1'
 
-    implementation 'androidx.activity:activity-ktx:1.2.3'
-    implementation 'androidx.fragment:fragment-ktx:1.3.5'
+    implementation 'androidx.activity:activity-ktx:1.2.4'
+    implementation 'androidx.fragment:fragment-ktx:1.3.6'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.preference:preference-ktx:1.1.1'
@@ -76,7 +76,7 @@ dependencies {
 
     // https://developer.android.com/jetpack/androidx/releases/leanback
     implementation "androidx.leanback:leanback:$leanback_version"
-    implementation "androidx.leanback:leanback-preference:$leanback_version"
+    implementation "androidx.leanback:leanback-preference:$leanback_preference_version"
     implementation 'androidx.leanback:leanback-tab:1.1.0-beta01'
 
     implementation 'com.google.android.material:material:1.4.0'
@@ -105,8 +105,9 @@ dependencies {
     implementation "io.insert-koin:koin-android:$koin_version"
 
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
-    implementation 'com.google.maps.android:maps-utils-ktx:2.4.0'
     implementation 'com.google.maps.android:maps-ktx:3.1.0'
+    implementation 'com.google.maps.android:maps-utils-ktx:3.1.0'
+    implementation 'com.google.maps.android:android-maps-utils:2.2.3'
 
     implementation 'com.github.himphen:logger:3.0.1'
 
