--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ buildscript {
         okhttp_version = '4.9.0'
         koin_version = '3.1.2'
         room_version = '2.3.0'
-        leanback_version = '1.1.0-rc01'
+        leanback_version = '1.1.0-rc02'
+        leanback_preference_version = '1.1.0-rc01'
     }
 
     repositories {
