--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
         <activity
             android:name=".ui.main.mobile.MainActivity"
-            android:theme="@style/AppTheme.Mobile" />
+            android:theme="@style/AppTheme.Mobile.MainActivity" />
         <activity
             android:name=".ui.settings.eta.listing.mobile.SettingsEtaListingActivity"
             android:theme="@style/AppTheme.Mobile" />
