feat: update app icon fix: eta layout

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,4 +119,7 @@ dependencies {
 
     // https://github.com/airbnb/lottie-android
     implementation "com.airbnb.android:lottie:4.0.0"
+
+    // https://github.com/marcoscgdev/Licenser
+    implementation 'com.github.marcoscgdev:Licenser:2.0.0'
 }
