--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,13 +9,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 31
+    buildToolsVersion "31.0.0"
 
     defaultConfig {
         applicationId "hibernate.v2.sunshine"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
     }
@@ -67,9 +67,9 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.1'
 
-    implementation 'androidx.activity:activity-ktx:1.3.0'
+    implementation 'androidx.activity:activity-ktx:1.3.1'
     implementation 'androidx.fragment:fragment-ktx:1.3.6'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
@@ -93,10 +93,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 
-    implementation platform('com.google.firebase:firebase-bom:28.3.0')
+    implementation platform('com.google.firebase:firebase-bom:28.3.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
+    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta02'
 
     // https://github.com/afollestad/material-dialogs
     implementation 'com.afollestad.material-dialogs:core:3.3.0'
@@ -112,7 +113,7 @@ dependencies {
     implementation 'com.github.st235:expandablebottombar:1.4.0'
 
     // https://github.com/coil-kt/coil
-    implementation 'io.coil-kt:coil:1.3.0'
+    implementation 'io.coil-kt:coil:1.3.2'
 
     // https://github.com/google/flexbox-layout
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
