--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = '1.5.21'
+        kotlin_version = '1.5.31'
         lifecycle_version = '2.3.1'
         retrofit_version = '2.9.0'
         okhttp_version = '4.9.0'
-        koin_version = '3.1.2'
+        koin_version = '3.1.3'
         room_version = '2.3.0'
-        leanback_version = '1.1.0-rc02'
-        leanback_preference_version = '1.1.0-rc01'
+        leanback_version = '1.2.0-alpha01'
+        leanback_preference_version = '1.2.0-alpha01'
     }
 
     repositories {
@@ -16,10 +16,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.1'
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.8'
+        classpath 'com.google.gms:google-services:4.3.10'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
     }
 }
