feat: sort route list before save to db

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Mobile" />
         <activity
+            android:name="hibernate.v2.sunshine.ui.route.mobile.RouteDetailsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Mobile" />
+        <activity
             android:name=".ui.settings.eta.layout.mobile.EtaLayoutSelectionActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Mobile" />
