--- a/api-service/build.gradle
+++ b/api-service/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
     id 'kotlinx-serialization'
+    id 'org.jlleitschuh.gradle.ktlint'
 }
 
 android {
@@ -27,10 +28,10 @@ android {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0'
-
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
 
     // https://github.com/square/retrofit
     api "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -40,7 +41,7 @@ dependencies {
     api "com.squareup.okhttp3:okhttp:$okhttp_version"
     api "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
-    implementation platform('com.google.firebase:firebase-bom:28.1.0')
+    implementation platform('com.google.firebase:firebase-bom:29.0.4')
     implementation 'com.google.firebase:firebase-database-ktx'
 
     implementation 'com.github.himphen:logger:3.0.1'
