--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = '1.5.31'
-        lifecycle_version = '2.4.0'
+        kotlin_version = '1.6.10'
+        lifecycle_version = '2.4.1'
         retrofit_version = '2.9.0'
         okhttp_version = '4.9.0'
-        koin_version = '3.1.3'
-        room_version = '2.3.0'
-        leanback_version = '1.2.0-alpha01'
-        leanback_preference_version = '1.2.0-alpha01'
+        koin_version = '3.1.5'
+        room_version = '2.4.1'
+        leanback_version = '1.2.0-alpha02'
+        leanback_preference_version = '1.2.0-alpha02'
     }
 
     repositories {
@@ -16,12 +16,16 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath 'com.android.tools.build:gradle:7.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.10'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
     }
+}
+
+plugins {
+    id("org.jlleitschuh.gradle.ktlint") version "10.2.1"
 }
 
 allprojects {
