chore: clean up code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ android {
         properties.load(project.rootProject.file('secrets.properties').newDataInputStream())
 
         debug {
+            applicationIdSuffix '.debug'
+            versionNameSuffix '-DEBUG'
             buildConfigField "String", "OPEN_WEATHER_API_KEY", properties.getProperty('open_weather.api_key')
             buildConfigField "String", "GOOGLE_MAP_API_KEY", properties.getProperty('google_map.api_key')
             resValue "string", "GOOGLE_MAP_API_KEY", properties.getProperty("google_map.api_key")
