--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
 
     defaultConfig {
         applicationId "hibernate.v2.sunshine"
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
@@ -31,6 +31,9 @@ android {
             buildConfigField "String", "OPEN_WEATHER_API_KEY", properties.getProperty('open_weather.api_key')
             buildConfigField "String", "GOOGLE_MAP_API_KEY", properties.getProperty('google_map.api_key')
             resValue "string", "GOOGLE_MAP_API_KEY", properties.getProperty("google_map.api_key")
+            buildConfigField "String", "ADMOB_BANNER_ID", properties.getProperty('admob.banner_id')
+            buildConfigField "String", "ADMOB_APP_ID", properties.getProperty("admob.app_id")
+            resValue "string", "ADMOB_APP_ID", properties.getProperty("admob.app_id")
         }
 
         release {
@@ -41,6 +44,9 @@ android {
             buildConfigField "String", "OPEN_WEATHER_API_KEY", properties.getProperty('open_weather.api_key')
             buildConfigField "String", "GOOGLE_MAP_API_KEY", properties.getProperty('google_map.api_key')
             resValue "string", "GOOGLE_MAP_API_KEY", properties.getProperty("google_map.api_key")
+            buildConfigField "String", "ADMOB_BANNER_ID", properties.getProperty('admob.banner_id')
+            buildConfigField "String", "ADMOB_APP_ID", properties.getProperty("admob.app_id")
+            resValue "string", "ADMOB_APP_ID", properties.getProperty("admob.app_id")
         }
     }
 
@@ -73,10 +79,11 @@ dependencies {
     implementation "androidx.leanback:leanback-preference:$leanback_preference_version"
     implementation 'androidx.leanback:leanback-tab:1.1.0-beta01'
 
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
 
     // https://developer.android.com/training/data-storage/room
     implementation "androidx.room:room-ktx:$room_version"
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
     kapt "androidx.room:room-compiler:$room_version"
 
     // https://developer.android.com/jetpack/androidx/releases/lifecycle
@@ -85,12 +92,13 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 
-    implementation platform('com.google.firebase:firebase-bom:29.1.0')
+    implementation platform('com.google.firebase:firebase-bom:30.0.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
-    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta04'
-    implementation 'com.google.firebase:firebase-appcheck-debug:16.0.0-beta04'
+    implementation 'com.google.firebase:firebase-appcheck-safetynet'
+    implementation 'com.google.firebase:firebase-appcheck-debug'
+    implementation 'com.google.android.gms:play-services-ads:20.6.0'
 
     // https://github.com/InsertKoinIO/koin
     implementation "io.insert-koin:koin-android:$koin_version"
