--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = '1.6.10'
+        kotlin_version = '1.6.20'
         lifecycle_version = '2.4.1'
         retrofit_version = '2.9.0'
         okhttp_version = '4.9.3'
-        koin_version = '3.1.5'
-        room_version = '2.4.1'
+        koin_version = '3.1.6'
+        room_version = '2.4.2'
         leanback_version = '1.2.0-alpha02'
         leanback_preference_version = '1.2.0-alpha02'
     }
@@ -16,7 +16,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.1'
+        classpath 'com.android.tools.build:gradle:7.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.10'
@@ -26,6 +26,7 @@ buildscript {
 
 plugins {
     id("org.jlleitschuh.gradle.ktlint") version "10.2.1"
+    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
 }
 
 allprojects {
