feat: add moko resources lib

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 kotlin.native.binary.memoryModel=experimental
+kotlin.mpp.stability.nowarn=true
