--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.10'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
         classpath 'com.squareup.sqldelight:gradle-plugin:1.5.3'
+        classpath "dev.icerock.moko:resources-generator:0.20.1"
     }
 }
 
