--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,6 @@ android.enableJetifier=true
 
 kotlin.native.binary.memoryModel=experimental
 kotlin.mpp.stability.nowarn=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
