--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,7 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion "31.0.0"
+    compileSdk 34
 
     signingConfigs {
         release {
@@ -23,7 +22,7 @@ android {
     defaultConfig {
         applicationId "hibernate.v2.tbia"
         minSdkVersion 24
-        targetSdkVersion 31
+        targetSdkVersion 34
         versionCode 240100
         versionName "Lion Rock Tunnel 1.0.0"
     }
@@ -55,11 +54,18 @@ android {
 
     kotlinOptions {
         freeCompilerArgs += "-opt-in=kotlin.RequiresOptIn"
+        jvmTarget = '17'
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     buildFeatures {
         viewBinding true
     }
+    namespace 'hibernate.v2.tbia'
 }
 
 def loadSigningConfigs() {
@@ -85,14 +91,14 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.1'
 
-    implementation 'androidx.activity:activity-ktx:1.4.0'
-    implementation 'androidx.fragment:fragment-ktx:1.4.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation 'androidx.activity:activity-ktx:1.8.0'
+    implementation 'androidx.fragment:fragment-ktx:1.6.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
     // https://developer.android.com/jetpack/androidx/releases/leanback
@@ -100,7 +106,7 @@ dependencies {
     implementation "androidx.leanback:leanback-preference:$leanback_preference_version"
     implementation 'androidx.leanback:leanback-tab:1.1.0-beta01'
 
-    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'com.google.android.material:material:1.10.0'
 
     // https://developer.android.com/jetpack/androidx/releases/lifecycle
     implementation "androidx.lifecycle:lifecycle-process:$lifecycle_version"
@@ -112,7 +118,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation "com.google.firebase:firebase-config-ktx"
-    implementation 'com.google.android.gms:play-services-ads:21.3.0'
+    implementation 'com.google.android.gms:play-services-ads:22.5.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
 
     // https://github.com/InsertKoinIO/koin
@@ -136,9 +142,6 @@ dependencies {
 
     // https://github.com/marcoscgdev/Licenser
     implementation 'com.github.marcoscgdev:Licenser:2.0.0'
-
-    // https://github.com/google/gson
-    implementation 'com.google.code.gson:gson:2.9.1'
 }
 
 ktlint {
